@startuml UML

class User {
    String id
    String lastname
    String firstname
    String email
    String role
    String password
}

class Expenditure {
    String id
    String description
    Double amount
    String contributor_id
    String group_id
}

class Group {
    String id
    String name
    String description
    Double total
}

class Contributor {
    String group_id
    String user_id
    Double balance
}

class Repayment {
    String id
    Double amount
    String debtor_id
    String payer_id
    String group_id
    Boolean is_payed
}


Contributor ||..o{ Expenditure
Contributor ||..o{ Repayment
Contributor ||..o{ Repayment
Group ||..o{ Expenditure
User ||..o{ Contributor
Group ||..o{ Contributor


@enduml
